--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
 
 	<title>TM</title>
 
+	<link href="//vjs.zencdn.net/7.8.2/video-js.min.css" rel="stylesheet">
+	<script src="//vjs.zencdn.net/7.8.2/video.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-hls/5.15.0/videojs-contrib-hls.min.js"></script>
+
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
